Add header__top content

--- a/index.html
+++ b/index.html
@@ -7,14 +7,62 @@
     <title>The London Lens Company</title>
 
     <link rel="stylesheet" href="styles\css\reset.css">
-    <link rel="stylesheet" href="styles\css\variables.css">
+    <link rel="stylesheet" href="styles\less\variables.less">
     <link rel="stylesheet" href="styles\css\main.css">
     <link rel="stylesheet" href="styles\css\animations.css">
     <link rel="stylesheet" href="styles\css\utilities.css">
 
+    <script src="https://kit.fontawesome.com/8caa51fd8b.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
+    <header class="header">
+        <div class="header__top">
+            <nav class="header__socials">
+                <ul class="header__list">
+                    <li class="header__list-item">
+                        <span class="fab fa-instagram-square"></span>
+                    </li>
+                    <li class="header__list-item">
+                        <span class="fab fa-facebook-square"></span>
+                    </li>
+                    <li class="header__list-item">
+                        <span class="fab fa-twitter-square"></span>
+                    </li>
+                    <li class="header__list-item">
+                        <span class="fab fa-whatsapp-square"></span>
+                    </li>
+                </ul>
+            </nav>
+            <nav class="header__user">
+                <ul class="header__list">
+                    <li class="header__list-item">
+                        Login / Register
+                        <img src="assets\icons\account.svg" alt="login or register">
+                    </li>
+                    <li class="header__list-item">
+                        <img src="assets\icons\cart.svg" alt="shopping cart">
+                    </li>
+                </ul>
+            </nav>
+        </div>
+
+        <div class="header__bottom">
+            <div class="header__logo">
+
+            </div>
+            <nav class="header__menu">
+                <ul class="header__list">
+                    <li class="header__list-item"></li>
+                    <li class="header__list-item"></li>
+                    <li class="header__list-item"></li>
+                    <li class="header__list-item"></li>
+                    <li class="header__list-item"></li>    
+                </ul>
+            </nav>
+        </div>
+    </header>
     
 </body>
 
